# rancais-cpp

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp
include/rancais-cpp/: rancais-cpp.hpp
include/rancais_cpp/: rancais_cpp.hpp
test/: CMakeLists.txt
test/source/: rancais-cpp_test.cpp  rancais_cpp_test.cpp
